<resources>
    <string name="app_name">Navigation Drawer</string>
    <string name="submit" />
    <string name="imports">Imports</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="tools">Tools</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="communicate">Communicate</string>
    <string name="my_app">My App</string>
    <string name="todo">TODO</string>
</resources>